--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  flutter_facebook_auth: ^5.0.0 # Added for Facebook Authentication
 
 dev_dependencies:
   flutter_test:
